--- a/tools/docker/specs/wavenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/wavenet-fp32-inference_spec.yml
@@ -37,7 +37,7 @@ slice_sets:
         <model name>: WaveNet
         <package dir>: wavenet-fp32-inference
         <package name>: wavenet-fp32-inference.tar.gz
-        <package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/wavenet-fp32-inference.tar.gz
+        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/wavenet-fp32-inference.tar.gz
         <precision>: FP32
         <use case>: text_to_speech
       uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/fp32
