--- a/tools/docker/specs/rfcn-fp32-inference_spec.yml
+++ b/tools/docker/specs/rfcn-fp32-inference_spec.yml
@@ -26,11 +26,11 @@ slice_sets:
                 <precision>: FP32
                 <mode>: inference
                 <use case>: object_detection
-                <package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/rfcn-fp32-inference.tar.gz
+                <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/rfcn-fp32-inference.tar.gz
                 <package name>: rfcn-fp32-inference.tar.gz
                 <package dir>: rfcn-fp32-inference
                 <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-object-detection-rfcn-fp32-inference
-                <k8s package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/rfcn-fp32-inference-k8s.tar.gz
+                <k8s package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/rfcn-fp32-inference-k8s.tar.gz
                 <k8s package name>: rfcn-fp32-inference-k8s.tar.gz
                 <k8s package dir>: rfcn-fp32-inference-k8s
               docs:
