--- a/tools/docker/specs/ssd-mobilenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/ssd-mobilenet-fp32-inference_spec.yml
@@ -60,7 +60,7 @@ slice_sets:
         <precision>: FP32
         <mode>: inference
         <use case>: object_detection
-        <package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/ssd-mobilenet-fp32-inference.tar.gz
+        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/ssd-mobilenet-fp32-inference.tar.gz
         <package name>: ssd-mobilenet-fp32-inference.tar.gz
         <package dir>: ssd-mobilenet-fp32-inference
         <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-object-detection-ssd-mobilenet-fp32-inference
