--- a/tools/docker/specs/unet-fp32-inference_spec.yml
+++ b/tools/docker/specs/unet-fp32-inference_spec.yml
@@ -36,7 +36,7 @@ slice_sets:
         <model name>: UNet
         <package dir>: unet_trained
         <package name>: unet-fp32-inference.tar.gz
-        <package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/unet-fp32-inference.tar.gz
+        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/unet-fp32-inference.tar.gz
         <precision>: FP32
         <use case>: image_segmentation
       uri: models/quickstart/image_segmentation/tensorflow/unet/inference/fp32
