--- a/tools/docker/specs/wide_deep-fp32-inference_spec.yml
+++ b/tools/docker/specs/wide_deep-fp32-inference_spec.yml
@@ -54,7 +54,7 @@ slice_sets:
         <model name>: Wide & Deep
         <precision>: FP32
         <use case>: recommendation
-        <package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/wide-deep-fp32-inference.tar.gz
+        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/wide-deep-fp32-inference.tar.gz
         <package name>: wide-deep-fp32-inference.tar.gz
         <package dir>: wide-deep-fp32-inference
         <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-recommendation-wide-deep-fp32-inference
