--- a/tools/docker/specs/bert-large-fp32-training_spec.yml
+++ b/tools/docker/specs/bert-large-fp32-training_spec.yml
@@ -26,7 +26,7 @@ slice_sets:
                 <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/bert-large-fp32-training.tar.gz
                 <package name>: bert-large-fp32-training.tar.gz
                 <package dir>: bert-large-fp32-training
-                <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-language-modeling-bert-large-fp32-training
+                <docker image>: intel/language-modeling:tf-2.3.0-imz-2.0.0-bert-large-fp32-training
               docs:
                   - name: Title
                     uri: models/quickstart/language_modeling/tensorflow/bert_large/training/fp32/.docs/title.md
