--- a/tools/docker/specs/faster-rcnn-fp32-inference_spec.yml
+++ b/tools/docker/specs/faster-rcnn-fp32-inference_spec.yml
@@ -32,7 +32,7 @@ slice_sets:
         uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: 'amr-registry.caas.intel.com/aipg-tf/model-zoo-ci:239-ci-build-1.15.2-object-detection-faster-rcnn-fp32-inference'
+        <docker image>: 'intel/object-detection:tf-1.15.2-imz-2.0.0-faster-rcnn-fp32-inference'
         <mode>: inference
         <model name>: Faster R-CNN
         <package dir>: faster-rcnn-fp32-inference
