--- a/tools/docker/specs/faster-rcnn-int8-inference_spec.yml
+++ b/tools/docker/specs/faster-rcnn-int8-inference_spec.yml
@@ -32,7 +32,7 @@ slice_sets:
         uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/int8/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo-ci:290-ci-build-1.15.2-object-detection-faster-rcnn-int8-inference
+        <docker image>: intel/object-detection:tf-1.15.2-imz-2.0.0-faster-rcnn-int8-inference
         <mode>: inference
         <model name>: Faster_RCNN
         <package dir>: faster_rcnn-int8-inference
