--- a/tools/docker/specs/maskrcnn-fp32-inference_spec.yml
+++ b/tools/docker/specs/maskrcnn-fp32-inference_spec.yml
@@ -31,7 +31,7 @@ slice_sets:
         uri: models/quickstart/image_segmentation/tensorflow/maskrcnn/inference/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: 'amr-registry.caas.intel.com/aipg-tf/model-zoo:1.15.2-image-segmentation-maskrcnn-fp32-inference'
+        <docker image>: 'intel/image-segmentation:tf-1.15.2-imz-2.0.0-maskrcnn-fp32-inference'
         <mode>: inference
         <model name>: Mask R-CNN
         <package dir>: maskrcnn-fp32-inference
