--- a/tools/docker/specs/resnet50-fp32-inference_spec.yml
+++ b/tools/docker/specs/resnet50-fp32-inference_spec.yml
@@ -25,7 +25,7 @@ slice_sets:
               <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/resnet50-fp32-inference.tar.gz
               <package name>: resnet50-fp32-inference.tar.gz
               <package dir>: resnet50-fp32-inference
-              <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-image-recognition-resnet50-fp32-inference
+              <docker image>: intel/image-recognition:tf-2.3.0-imz-2.0.0-resnet50-fp32-inference
             docs:
             - name: Title
               uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/fp32/.docs/title.md
