--- a/tools/docker/specs/rfcn-fp32-inference_spec.yml
+++ b/tools/docker/specs/rfcn-fp32-inference_spec.yml
@@ -29,10 +29,11 @@ slice_sets:
                 <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/rfcn-fp32-inference.tar.gz
                 <package name>: rfcn-fp32-inference.tar.gz
                 <package dir>: rfcn-fp32-inference
-                <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-object-detection-rfcn-fp32-inference
+                <docker image>: intel/object-detection:tf-2.3.0-imz-2.0.0-rfcn-fp32-inference
                 <k8s package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/rfcn-fp32-inference-k8s.tar.gz
                 <k8s package name>: rfcn-fp32-inference-k8s.tar.gz
                 <k8s package dir>: rfcn-fp32-inference-k8s
+                <docker image>: intel/object-detection:tf-2.3.0-imz-2.0.0-rfcn-fp32-inference
               docs:
                   - name: Title
                     uri: models/quickstart/object_detection/tensorflow/rfcn/inference/fp32/.docs/title.md
