--- a/tools/docker/specs/ssd-mobilenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/ssd-mobilenet-fp32-inference_spec.yml
@@ -63,7 +63,7 @@ slice_sets:
         <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/ssd-mobilenet-fp32-inference.tar.gz
         <package name>: ssd-mobilenet-fp32-inference.tar.gz
         <package dir>: ssd-mobilenet-fp32-inference
-        <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-object-detection-ssd-mobilenet-fp32-inference
+        <docker image>: intel/object-detection:tf-2.3.0-imz-2.0.0-ssd-mobilenet-fp32-inference
       docs:
       - name: Title
         uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/fp32/.docs/title.md
