--- a/tools/docker/specs/unet-fp32-inference_spec.yml
+++ b/tools/docker/specs/unet-fp32-inference_spec.yml
@@ -31,7 +31,7 @@ slice_sets:
         uri: models/quickstart/image_segmentation/tensorflow/unet/inference/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:1.15.2-image-segmentation-unet-fp32-inference
+        <docker image>: intel/image-segmentation:tf-1.15.2-imz-2.0.0-unet-fp32-inference
         <mode>: inference
         <model name>: UNet
         <package dir>: unet_trained
