--- a/tools/docker/specs/wavenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/wavenet-fp32-inference_spec.yml
@@ -32,7 +32,7 @@ slice_sets:
         uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:1.15.2-text-to-speech-wavenet-fp32-inference
+        <docker image>: intel/text-to-speech:tf-1.15.2-imz-2.0.0-wavenet-fp32-inference
         <mode>: inference
         <model name>: WaveNet
         <package dir>: wavenet-fp32-inference
