--- a/tools/docker/specs/resnet50v1-5-fp32-inference_spec.yml
+++ b/tools/docker/specs/resnet50v1-5-fp32-inference_spec.yml
@@ -55,6 +55,7 @@ slice_sets:
           <package name>: resnet50v1-5-fp32-inference.tar.gz
           <package dir>: resnet50v1-5-fp32-inference
           <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-image-recognition-resnet50v1-5-fp32-inference
+          <docker image>: intel/image-recognition:tf-2.3.0-imz-2.0.0-resnet50v1-5-fp32-inference
         docs:
         - name: Title
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/title.md
