add dry-run and pass-through
Signed-off-by: Kam D Kasravi <kam.d.kasravi@intel.com>

--- a/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/single-node/pod.yaml
+++ b/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/single-node/pod.yaml
@@ -11,8 +11,9 @@ spec:
   containers:
   - name: single-node
     image: docker.io/model-zoo:2.3.0-recommendation-wide-deep-large-ds-fp32-training # {"$openapi":"IMAGE"}
+    imagePullPolicy: Always
     workingDir: /workspace/wide-deep-large-ds-fp32-training # {"$openapi":"MODEL_DIR"}
-    command: # {"$openapi":"COMMAND"}
+    command:
     - /workspace/wide-deep-large-ds-fp32-training/quickstart/fp32_training.sh # {"$openapi":"COMMAND"}
     env:
     - name: DATASET_DIR
