--- a/k8s/language_modeling/tensorflow/bert_large/training/fp32/mlops/single-node/pod.yaml
+++ b/k8s/language_modeling/tensorflow/bert_large/training/fp32/mlops/single-node/pod.yaml
@@ -10,7 +10,7 @@ spec:
     fsGroup: 0 # {"$openapi":"FS_ID"}
   containers:
   - name: single-node
-    image: docker.io/model-zoo:2.3.0-language-modeling-bert-large-fp32-training # {"$openapi":"IMAGE"}
+    image: docker.io/intel/language-modeling:tf-2.3.0-imz-2.0.0-bert-large-fp32-training # {"$openapi":"IMAGE"}
     workingDir: /workspace/bert-large-fp32-training # {"$openapi":"MODEL_DIR"}
     command: # {"$openapi":"COMMAND"}
     - /workspace/bert-large-fp32-training/quickstart/fp32_training_single_node.sh # {"$openapi":"COMMAND"}
