--- a/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/single-node/pod.yaml
+++ b/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/single-node/pod.yaml
@@ -10,7 +10,7 @@ spec:
     fsGroup: 0 # {"$openapi":"FS_ID"}
   containers:
   - name: single-node
-    image: docker.io/model-zoo:2.3.0-recommendation-wide-deep-large-ds-fp32-training # {"$openapi":"IMAGE"}
+    image: docker.io/intel/recommendation:tf-2.3.0-imz-2.0.0-wide-deep-large-ds-fp32-training # {"$openapi":"IMAGE"}
     imagePullPolicy: Always
     workingDir: /workspace/wide-deep-large-ds-fp32-training # {"$openapi":"MODEL_DIR"}
     command:
