--- a/tools/docker/specs/bert-large-fp32-training_spec.yml
+++ b/tools/docker/specs/bert-large-fp32-training_spec.yml
@@ -18,6 +18,7 @@ slice_sets:
           documentation:
               name: README.md
               uri: models/quickstart/language_modeling/tensorflow/bert_large/training/fp32
+              k8s_uri: models/k8s/language_modeling/tensorflow/bert_large/training/fp32
               text_replace:
                 <mode>: training
                 <model name>: BERT Large
@@ -26,6 +27,9 @@ slice_sets:
                 <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/bert-large-fp32-training.tar.gz
                 <package name>: bert-large-fp32-training.tar.gz
                 <package dir>: bert-large-fp32-training
+                <k8s package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/bert-large-fp32-training-k8s.tar.gz
+                <k8s package name>: bert-large-fp32-training-k8s.tar.gz
+                <k8s package dir>: bert-large-fp32-training-k8s
                 <docker image>: intel/language-modeling:tf-2.3.0-imz-2.0.0-bert-large-fp32-training
               docs:
                   - name: Title
@@ -38,14 +42,18 @@ slice_sets:
                     uri: models/quickstart/language_modeling/tensorflow/bert_large/training/fp32/.docs/datasets.md
                   - name: Quick Start Scripts
                     uri: models/quickstart/language_modeling/tensorflow/bert_large/training/fp32/.docs/quickstart.md
+                    k8s_uri: models/k8s/language_modeling/tensorflow/bert_large/training/fp32/.docs/quickstart.md
                   - name: Bare Metal
                     uri: models/quickstart/language_modeling/tensorflow/bert_large/training/fp32/.docs/baremetal.md
                   - name: Docker
                     uri: models/quickstart/language_modeling/tensorflow/bert_large/training/fp32/.docs/docker.md
                   - name: License link
                     uri: models/quickstart/language_modeling/tensorflow/bert_large/training/fp32/.docs/license.md
+                  - name: Kubernetes
+                    k8s_uri: models/k8s/language_modeling/tensorflow/bert_large/training/fp32/.docs/kubernetes.md
           args:
               - PACKAGE_NAME=bert-large-fp32-training
+              - K8S_PACKAGE_NAME=bert-large-fp32-training-k8s
           files:
               - source: benchmarks/common
                 destination: benchmarks/common
@@ -56,6 +64,8 @@ slice_sets:
               - source: models/language_modeling/tensorflow/bert_large/training/fp32
                 destination: ./models/language_modeling/tensorflow/bert_large/training/fp32
               - source: quickstart/language_modeling/tensorflow/bert_large/training/fp32
+                k8s_source: k8s/language_modeling/tensorflow/bert_large/training/fp32
                 destination: quickstart
               - source: quickstart/common
+                k8s_source: k8s/common
                 destination: quickstart/common
