--- a/tools/docker/specs/wide-deep-large-ds-fp32-training_spec.yml
+++ b/tools/docker/specs/wide-deep-large-ds-fp32-training_spec.yml
@@ -10,6 +10,7 @@ slice_sets:
   - add_to_name: -wide-deep-large-ds-fp32-training
     args:
     - PACKAGE_NAME=wide-deep-large-ds-fp32-training
+    - K8S_PACKAGE_NAME=wide-deep-large-ds-fp32-training-k8s
     dockerfile_subdirectory: model_containers
     downloads: []
     files:
@@ -35,14 +36,17 @@ slice_sets:
       source: models/recommendation/tensorflow/wide_deep_large_ds/training
     - destination: quickstart/common
       source: quickstart/common
+      k8s_source: k8s/common
     - destination: quickstart
       source: quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32
+      k8s_source: k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32
     partials:
     - model_package
     - entrypoint
     documentation:
       name: README.md
       uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32
+      k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32
       text_replace:
         <mode>: training
         <model name>: Wide and Deep Large Dataset
@@ -51,6 +55,9 @@ slice_sets:
         <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/wide-deep-large-ds-fp32-training.tar.gz
         <package name>: wide-deep-large-ds-fp32-training.tar.gz
         <package dir>: wide-deep-large-ds-fp32-training
+        <k8s package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_0_0/wide-deep-large-ds-fp32-training-k8s.tar.gz
+        <k8s package name>: wide-deep-large-ds-fp32-training-k8s.tar.gz
+        <k8s package dir>: wide-deep-large-ds-fp32-training-k8s
         <docker image>: intel/recommendation:tf-2.3.0-imz-2.0.0-wide-deep-large-ds-fp32-training
       docs:
       - name: Title
@@ -63,6 +70,7 @@ slice_sets:
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/datasets.md
       - name: Quick Start Scripts
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/quickstart.md
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/quickstart.md
       - name: Bare Metal
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/baremetal.md
       - name: Docker
@@ -71,3 +79,5 @@ slice_sets:
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/advancedoptions.md
       - name: License link
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/license.md
+      - name: Kubernetes
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/kubernetes.md
