Use "intel/intel-optimized-tensorflow:2.3.0-ubuntu-20.04" as the base container for TensorFlow workflows

--- a/tools/docker/specs/base_spec.yml
+++ b/tools/docker/specs/base_spec.yml
@@ -67,19 +67,25 @@ slice_sets:
     mpi-horovod:
         - add_to_name: ""
           partials:
+              - python-build
               - gcc-8
               - kubectl-1.18.3
               - openmpi-2.1.1-8
               - openssh-7.6
-              - horovod-0.19.1
+              - horovod
+          args:
+              - PY_VERSION=3.7
     
     object-detection:
         - add_to_name: "-object-detection"
           partials:
               - common
+              - python-build
               - tensorflow/model-source
               - object_detection/pip_installs
               - object_detection/protoc
+          args:
+              - PY_VERSION=3.7
 
     image-recognition:
         - add_to_name: "-image-recognition"
