--- a/tools/docker/specs/bert-large-fp32-training_spec.yml
+++ b/tools/docker/specs/bert-large-fp32-training_spec.yml
@@ -13,6 +13,7 @@ slice_sets:
         - add_to_name: "-bert-large-fp32-training"
           dockerfile_subdirectory: "model_containers"
           partials:
+              - python-build
               - model_package
               - entrypoint
           documentation:
