--- a/tools/docker/specs/resnet50v1-5-fp32-inference_spec.yml
+++ b/tools/docker/specs/resnet50v1-5-fp32-inference_spec.yml
@@ -64,10 +64,15 @@ slice_sets:
         docs:
         - name: Title
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/title.md
+          k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/title.md
         - name: Description
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/description.md
+          k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/description.md
         - name: Download link
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/download.md
+          k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/download.md
+        - name: Datasets
+          k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/datasets.md
         - name: Quick Start Scripts
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/quickstart.md
           k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/quickstart.md
@@ -75,9 +80,11 @@ slice_sets:
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/baremetal.md
         - name: Docker
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/docker.md
+        - name: Kubernetes
+          k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/kubernetes.md
         - name: Advanced Options
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/advancedoptions.md
         - name: License link
           uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/license.md
-        - name: Kubernetes
-          k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/kubernetes.md
+          k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/.docs/license.md
+
