--- a/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
+++ b/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
@@ -34,22 +34,28 @@ slice_sets:
               docs:
                   - name: Title
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/title.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/title.md
                   - name: Description
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/description.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/description.md
                   - name: Download link
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/download.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/download.md
+                  - name: Datasets
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/datasets.md
                   - name: Quick Start Scripts
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/quickstart.md
                   - name: Bare Metal
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/baremetal.md
                   - name: Docker
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/docker.md
+                  - name: Kubernetes
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/kubernetes.md
                   - name: Advanced Options
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/advancedoptions.md
                   - name: License link
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/license.md
-                  - name: Kubernetes
-                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/kubernetes.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/license.md
           args:
               - PACKAGE_NAME=resnet50v1-5-fp32-training
               - K8S_PACKAGE_NAME=resnet50v1-5-fp32-training-k8s
