--- a/tools/docker/specs/wide-deep-large-ds-fp32-training_spec.yml
+++ b/tools/docker/specs/wide-deep-large-ds-fp32-training_spec.yml
@@ -62,12 +62,16 @@ slice_sets:
       docs:
       - name: Title
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/title.md
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/title.md
       - name: Description
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/description.md
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/description.md
       - name: Download link
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/download.md
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/download.md
       - name: Datasets
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/datasets.md
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/datasets.md
       - name: Quick Start Scripts
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/quickstart.md
         k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/quickstart.md
@@ -75,9 +79,11 @@ slice_sets:
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/baremetal.md
       - name: Docker
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/docker.md
+      - name: Kubernetes
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/kubernetes.md
       - name: Advanced Options
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/advancedoptions.md
       - name: License link
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/license.md
-      - name: Kubernetes
-        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/kubernetes.md
+        k8s_uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/license.md
+
