--- a/tools/docker/specs/resnet50-fp32-inference_spec.yml
+++ b/tools/docker/specs/resnet50-fp32-inference_spec.yml
@@ -66,6 +66,8 @@ slice_sets:
                 destination: benchmarks/image_recognition/tensorflow/resnet50/README.md
               - source: models/image_recognition/tensorflow/resnet50/inference
                 destination: models/image_recognition/tensorflow/resnet50/inference
+              - destination: quickstart/common
+                source: quickstart/common
               - source: quickstart/image_recognition/tensorflow/resnet50/inference/fp32
                 destination: quickstart
           downloads:
