Perf analysis notebooks among different data types (fp32/bf16/int8)

--- a/docs/notebooks/perf_analysis/profiling/topo.ini
+++ b/docs/notebooks/perf_analysis/profiling/topo.ini
@@ -3,8 +3,11 @@ model-name = resnet50
 in-graph = 
 mode = inference
 precision = fp32
+data-location = 
+data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
 throughput-keyword = Throughput
-wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_6/resnet50_fp32_pretrained_model.pb
+throughput-index = 1
+wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50_fp32_pretrained_model.pb
 json-fname = timeline_resnet50_f32_infer_merged_runs.json
 patches = 0001-resnet50-f32-TF-timeline.patch
 
@@ -13,8 +16,11 @@ model-name = resnet50
 in-graph = 
 mode = inference
 precision = int8
+data-location = 
+data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
 throughput-keyword = Throughput
-wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_6/resnet50_int8_pretrained_model.pb
+throughput-index = 1
+wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50_int8_pretrained_model.pb
 json-fname = timeline_resnet50_int8_infer_merged_runs.json
 patches = 0001-resnet50-int8-TF-timeline.patch
 
@@ -23,7 +29,10 @@ model-name = resnet50v1_5
 in-graph = 
 mode = inference
 precision = fp32
+data-location = 
+data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
 throughput-keyword = Throughput
+throughput-index = 1
 wget = https://zenodo.org/record/2535873/files/resnet50_v1.pb
 json-fname = timeline_resnet50v1_5_f32_infer_merged_runs.json
 patches = 0001-resnet50v1_5-f32-TF-timeline.patch
@@ -33,8 +42,11 @@ model-name = resnet50v1_5
 in-graph = 
 mode = inference
 precision = bfloat16
+data-location = 
+data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
 throughput-keyword = Throughput
-wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_6_1/resnet50_v1_5_bfloat16.pb
+throughput-index = 1
+wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50_v1_5_bfloat16.pb
 json-fname = timeline_resnet50v1_5_bf16_infer_merged_runs.json
 patches = 0001-resnet50v1_5-f32-TF-timeline.patch
 
@@ -43,7 +55,77 @@ model-name = resnet50v1_5
 in-graph = 
 mode = inference
 precision = int8
+data-location = 
+data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
 throughput-keyword = Throughput
-wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_6/resnet50v1_5_int8_pretrained_model.pb
+throughput-index = 1
+wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50v1_5_int8_pretrained_model.pb
 json-fname = timeline_resnet50v1_5_int8_infer_merged_runs.json
-patches = 0001-resnet50v1_5-int8-TF-timeline.patch
+patches = 0001-resnet50v1_5-f32-TF-timeline.patch
+
+[resnet50v1_5 train fp32]
+model-name = resnet50v1_5
+mode = training
+precision = fp32
+checkpoint = ./
+data-location =
+data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
+throughput-keyword = average
+throughput-index = -1
+json-fname = timeline_resnet50v1_5_f32_train_merged_runs.json
+patches = 0001-resnet50v1_5-train-fp32.patch
+
+[resnet50v1_5 train bfloat16]
+model-name = resnet50v1_5
+mode = training
+precision = bfloat16
+checkpoint = ./
+data-location =
+data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
+throughput-keyword = average
+throughput-index = -1
+json-fname = timeline_resnet50v1_5_bf16_train_merged_runs.json
+patches = 0001-resnet50v1_5-train-bfloat16.patch
+
+[densenet169 infer fp32]
+model-name = densenet169
+in-graph = 
+mode = inference
+precision = fp32
+throughput-keyword = images/sec
+throughput-index = 3
+wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/densenet169_fp32_pretrained_model.pb
+json-fname = timeline_densenet169_f32_infer_merged_runs.json
+patches = 0001-densenet169-infer-fp32.patch
+
+[wide_deep infer fp32]
+model-name = wide_deep
+mode = inference
+precision = fp32
+throughput-keyword = Throughput
+throughput-index = -1
+wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/wide_deep_fp32_pretrained_model.tar.gz
+json-fname = timeline_wide_deep_f32_infer_merged_runs.json
+patches = 0001-wide_deep-infer-fp32.patch
+model-source-dir = 
+data-location = 
+checkpoint = 
+data-download = python benchmarks/recommendation/tensorflow/wide_deep/inference/fp32/data_download.py --data_dir widedeep_dataset #Then set data-location folder as CURRENTPATH/widedeep_dataset
+preprocessing = git clone https://github.com/tensorflow/models.git tensorflow-models; cd tensorflow-models; git fetch origin pull/7461/head:wide-deep-tf2 ; git checkout wide-deep-tf2 # Then set model-source-dir as CURRENTPATH/tensorflow-models
+
+[bert_large infer fp32]
+model-name = bert_large
+mode = inference
+precision = fp32
+throughput-keyword = Elapsedtime
+throughput-index = -1
+wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/bert_large_checkpoints.zip
+json-fname = timeline_bert_large_f32_infer_merged_runs.json
+patches = 0001-bert_large-infer-fp32.patch
+data-location = 
+checkpoint = 
+output-dir = 
+infer-option = =SQuAD
+profile = =True
+data-download = wget https://storage.googleapis.com/bert_models/2019_05_30/wwm_uncased_L-24_H-1024_A-16.zip; unzip wwm_uncased_L-24_H-1024_A-16.zip; wget https://rajpurkar.github.io/SQuAD-explorer/dataset/dev-v1.1.json -P wwm_uncased_L-24_H-1024_A-16 #Then set data-location folder as CURRENTPATH/wwm_uncased_L-24_H-1024_A-16
+
