Fix ssd-resnet34 Docker image name

--- a/tools/docker/specs/transformer-mlperf-fp32-training_spec.yml
+++ b/tools/docker/specs/transformer-mlperf-fp32-training_spec.yml
@@ -31,7 +31,7 @@ slice_sets:
         uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: intel/language-modeling:tf-2.3.0-imz-2.1.0-language-translation-transformer-mlperf-fp32-training
+        <docker image>: intel/language-translation:tf-2.3.0-imz-2.1.0-transformer-mlperf-fp32-training
         <mode>: training
         <model name>: Transformer Language
         <package dir>: transformer_mlperf-fp32-training
