--- a/tools/docker/specs/ssd-resnet34-fp32-training_spec.yml
+++ b/tools/docker/specs/ssd-resnet34-fp32-training_spec.yml
@@ -33,7 +33,7 @@ slice_sets:
         uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: 'intel/language-modeling:tf-2.3.0-imz-2.1.0-object-detection-ssd-resnet34-fp32-training'
+        <docker image>: 'intel/object-detection:tf-2.3.0-imz-2.1.0-ssd-resnet34-fp32-training'
         <mode>: training
         <model name>: SSD-ResNet34
         <package dir>: ssd-resnet34-fp32-training
