Add spec and doc updates for the PyTorch ResNet50 FP32 and Int8 docker containers

--- a/tools/docker/specs/base_spec.yml
+++ b/tools/docker/specs/base_spec.yml
@@ -64,6 +64,11 @@ slice_sets:
           args:
               - UBUNTU_VERSION=20.04
 
+    pytorch:
+        - add_to_name: "pytorch"
+          partials:
+              - pytorch/pytorch-base
+
     mpi-horovod:
         - add_to_name: ""
           partials:
