--- a/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/mlops/multi-node/user-allocated-pvc/mpi-job.yaml
+++ b/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/mlops/multi-node/user-allocated-pvc/mpi-job.yaml
@@ -10,7 +10,7 @@ spec:
       replicas: 1
       template:
         spec:
-          serviceAccountName: resnet50v1-5-fp32-training # {"$openapi":"MODEL_NAME"}
+          serviceAccountName: resnet50v1-5-fp32-training
           containers:
           - name: mpi-launcher
             imagePullPolicy: Always
@@ -20,25 +20,9 @@ spec:
               runAsUser: 0 # {"$openapi":"USER_ID"}
               runAsGroup: 0 # {"$openapi":"GROUP_ID"}
               fsGroup: 0 # {"$openapi":"FS_ID"}
-            env:
-            - name: MODEL_DIR
-              value: /workspace/resnet50v1-5-fp32-training # {"$openapi":"MODEL_DIR"} 
-            - name: DATASET_DIR
-              value: /datasets # {"$openapi":"DATASET_DIR"}
-            - name: GROUP_ID
-              value: "0" # {"$openapi":"GROUP_ID_VALUE"}
-            - name: GROUP_NAME
-              value: root # {"$openapi":"GROUP_NAME"}
-            - name: OUTPUT_DIR
-              value: /nfs/root/resnet50v1-5-fp32-training/output # {"$openapi":"OUTPUT_PATH"}
-            - name: USER_ID
-              value: "0" # {"$openapi":"USER_ID_VALUE"}
-            - name: USER_NAME
-              value: root # {"$openapi":"USER_NAME"}
-            - name: PYTHONPATH
-              value: /workspace/resnet50v1-5-fp32-training/models/image_recognition/tensorflow/resnet50v1_5/training:$PYTHONPATH # {"$openapi":"PYTHONPATH"}
-            - name: LD_LIBRARY_PATH
-              value: /usr/local/lib:/usr/local/lib/mpirun:$LD_LIBRARY_PATH
+            envFrom:
+            - configMapRef:
+                name: resnet50v1-5-fp32-training # {"$openapi":"MODEL_NAME"}
             command:
             - mpirun
             args:
@@ -86,56 +70,42 @@ spec:
             - name: datasets
               mountPath: /datasets # {"$openapi":"DATASET_DIR"}
               readOnly: true
-            - name: nfs-path
-              mountPath: /nfs # {"$openapi":"NFS_PATH"}
+            - name: pvc-path
+              mountPath: /pvc # {"$openapi":"PVC_PATH"}
           volumes:
           - name: datasets
             hostPath:
               path: /datasets # {"$openapi":"DATASET_DIR"}
-          - name: nfs-path
-            nfs:
-              server: 0.0.0.0 # {"$openapi":"NFS_SERVER"}
-              path: /nfs # {"$openapi":"NFS_PATH"}
+          - name: pvc-path
+            persistentVolumeClaim:
+              claimName: workdisk # {"$openapi":"PVC_NAME"}
     Worker:
       replicas: 2 # {"$openapi":"WORKERS"}
       template:
         spec:
-          serviceAccountName: resnet50v1-5-fp32-training # {"$openapi":"MODEL_NAME"}
+          serviceAccountName: resnet50v1-5-fp32-training
           containers:
           - name: mpi-worker
             imagePullPolicy: Always
             workingDir: /workspace/resnet50v1-5-fp32-training # {"$openapi":"MODEL_DIR"}
             image: docker.io/intel/image-recognition:tf-2.3.0-imz-2.1.0-resnet50v1-5-fp32-training # {"$openapi":"IMAGE"}
             securityContext:
-              runAsUser: 0 # {"$openapi":"USER_ID"}
-              runAsGroup: 0 # {"$openapi":"GROUP_ID"}
-              fsGroup: 0 # {"$openapi":"FS_ID"}
-            env:
-            - name: MODEL_DIR
-              value: /workspace/resnet50v1-5-fp32-training # {"$openapi":"MODEL_DIR"} 
-            - name: DATASET_DIR
-              value: /datasets # {"$openapi":"DATASET_DIR"}
-            - name: GROUP_ID
-              value: "0" # {"$openapi":"GROUP_ID_VALUE"}
-            - name: GROUP_NAME
-              value: root # {"$openapi":"GROUP_NAME"}
-            - name: OUTPUT_DIR
-              value: /nfs/root/resnet50v1-5-fp32-training/output # {"$openapi":"OUTPUT_PATH"}
-            - name: USER_ID
-              value: "0" # {"$openapi":"USER_ID_VALUE"}
-            - name: USER_NAME
-              value: root # {"$openapi":"USER_NAME"}
+              runAsUser: 0
+              runAsGroup: 0
+              fsGroup: 0
+            envFrom:
+            - configMapRef:
+                name: resnet50v1-5-fp32-training # {"$openapi":"MODEL_NAME"}
             volumeMounts:
             - name: datasets
               mountPath: /datasets # {"$openapi":"DATASET_DIR"}
               readOnly: true
-            - name: nfs-path
-              mountPath: /nfs # {"$openapi":"NFS_PATH"}
+            - name: pvc-path
+              mountPath: /pvc # {"$openapi":"PVC_PATH"}
           volumes:
           - name: datasets
             hostPath:
               path: /datasets # {"$openapi":"DATASET_DIR"}
-          - name: nfs-path
-            nfs:
-              server: 0.0.0.0 # {"$openapi":"NFS_SERVER"}
-              path: /nfs # {"$openapi":"NFS_PATH"}
+          - name: pvc-path
+            persistentVolumeClaim:
+              claimName: workdisk # {"$openapi":"PVC_NAME"}
