--- a/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/mlops/single-node/user-allocated-pvc/kustomization.yaml
+++ b/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/mlops/single-node/user-allocated-pvc/kustomization.yaml
@@ -2,5 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - service-account.yaml
-- mpi-job.yaml
+- config-map.yaml
+- pod.yaml
+configMapGenerator:
+- files:
+  - fp32_training_demo.sh
+  name: mlops-scripts
 namespace: default
