--- a/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
+++ b/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
@@ -82,6 +82,9 @@ slice_sets:
                 k8s_source: k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32
                 destination: quickstart
               - source: quickstart/common
+                k8s_source: quickstart/common
+                destination: quickstart/common
+              - source: quickstart/common
                 k8s_source: k8s/common
                 destination: quickstart/common
 
