--- a/tools/docker/specs/scikit-learn_spec.yml
+++ b/tools/docker/specs/scikit-learn_spec.yml
@@ -10,6 +10,7 @@ slice_sets:
   - add_to_name: scikit-learn
     args:
     - UBUNTU_VERSION=20.04
+    - MINICONDA_VERSION=4.7.12
     dockerfile_subdirectory: ml/scikit-learn
     partials:
     - ml/conda-install-scikit-learn
